--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     responsive: true,
                     plugins: { legend: { labels: { color: "grey" } } },
                     scales: { 
-                        x: { ticks: { color: "balck" } },
-                        y: { ticks: { color: "balck" } }
+                        x: { ticks: { color: "#4437c3" } },
+                        y: { ticks: { color: "#4437c3" } }
                     }
                 }
             });
