--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #4437c3; color: white; }
-        .container { background: #978fe9; padding: 20px; margin: 20px auto; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); width: 90%; }
+        .container { background: #978fe9; padding: 20px; margin: 20px auto; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); width: 95%; }
       	.input-container { background: #e3f2fd; padding: 15px; border-radius: 10px; margin-bottom: 20px; display: flex; flex-direction: column; align-items: center; color: black; }
-        .input-group { display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; width: 50%; }
+        .input-group { display: flex; align-items: center; justify-content: center; margin-bottom: 10px; width: 100%; }
         .output-container { background: #c8e6c9; padding: 15px; border-radius: 10px; color: black; }
       	.formula-container { background: #f5f5f5; padding: 15px; border-radius: 10px; margin-bottom: 20px; text-align: left;color: black;}
-        input { margin: 5px; padding: 5px; text-align: right; }
+        input { margin: 5px; padding: 5px; text-align: right; width: 30%;}
         table { margin: 20px auto; border-collapse: collapse; width: 90%; background: white; table-layout: fixed; }
         th, td { border: 1px solid black; padding: 10px; text-align: center; width: 25%; color: black; }
         th { background: #90caf9; }
@@ -90,15 +90,15 @@
         <div class="input-container">
             <div class="input-group">
                 <label for="capital">Capital Inicial:</label>
-                <input type="text" id="capital" placeholder="Ingrese el capital" required oninput="formatearNumero(this)">
+                <input type="text" id="capital" placeholder="" required oninput="formatearNumero(this)">
             </div>
             <div class="input-group">
                 <label for="tna">TNA (%):</label>
-                <input type="text" id="tna" placeholder="Ingrese la TNA" required oninput="formatearNumero(this)">
+                <input type="text" id="tna" placeholder="" required oninput="formatearNumero(this)">
             </div>
             <div class="input-group">
                 <label for="capitalAdicional">Capital Adicional:</label>
-                <input type="text" id="capitalAdicional" placeholder="Ingrese el capital adicional" required oninput="formatearNumero(this)">
+                <input type="text" id="capitalAdicional" placeholder="" required oninput="formatearNumero(this)">
             </div>
             <button onclick="calcularInteres()">Calcular</button>
         </div>
@@ -111,9 +111,9 @@
             <thead>
                 <tr>
                     <th>Mes</th>
-                    <th>Capital Simple</th>
-                    <th>Capital Compuesto</th>
-                    <th>Compuesto con Adicional</th>
+                    <th>Simple</th>
+                    <th>Compuesto</th>
+                    <th>Con Adicional</th>
                 </tr>
             </thead>
             <tbody id="resultado">
@@ -198,9 +198,9 @@
                 data: {
                     labels: meses,
                     datasets: [
-                        { label: "Capital Simple", data: capitalSimple, borderColor: "blue", fill: false },
-                        { label: "Capital Compuesto", data: capitalCompuesto, borderColor: "green", fill: false },
-                        { label: "Compuesto con Adicional", data: capitalConAdicional, borderColor: "red", fill: false }
+                        { label: "Simple", data: capitalSimple, borderColor: "blue", fill: false },
+                        { label: "Compuesto", data: capitalCompuesto, borderColor: "green", fill: false },
+                        { label: "Con Adicional", data: capitalConAdicional, borderColor: "red", fill: false }
                     ]
                 },
                 options: {
